# strictly-annotated

./: README.md  dune  dune-project  strictly-annotated.opam  strictly_annotated.ml  strictly_annotated.mli  test.ml
.circleci/: config.yml
